ci/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "23ws-ase-pr-inso-06-ingress"
  namespace: 23ws-ase-pr-inso-06
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: 23ws-ase-pr-inso-06.apps.student.inso-w.at
      http:
        paths:
          - path: /develop/app/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: s-23ws-ase-pr-inso-06-develop-frontend-service
                port:
                  number: 80
          - path: /develop/backend/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: s-23ws-ase-pr-inso-06-develop-backend-service
                port:
                  number: 80
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: s-23ws-ase-pr-inso-06-db-service
                port:
                  number: 8080
          - path: /release/app/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: s-23ws-ase-pr-inso-06-release-frontend-service
                port:
                  number: 80
          - path: /release/backend/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: s-23ws-ase-pr-inso-06-release-backend-service
                port:
                  number: 80
